fixed channel list spacing on sidebar

--- a/react-app/src/components/ChannelPage/ChannelPage.css
+++ b/react-app/src/components/ChannelPage/ChannelPage.css
@@ -67,16 +67,20 @@
     display: flex;
     flex-direction: column-reverse;
     width: calc(100%);
-    max-height: calc(100% - 250px);
-    overflow: overlay;
+    max-height: calc(100% - 240px);
+    overflow-y: overlay;
     position: relative;
     scrollbar-gutter: stable;
     scrollbar-width: thin;
+    word-wrap: break-word;
+    white-space: initial;
 }
 
 .SingleMessageBody {
     display: flex;
     padding: 5px 50px 10px 25px;
+    white-space: initial;
+    word-wrap: break-word;
 }
 
 .SingleMessageBody:hover {
