--- a/react-app/src/components/Channels/Channels.css
+++ b/react-app/src/components/Channels/Channels.css
@@ -5,14 +5,16 @@
 
 .channel__list {
     display: flex;
+    flex-direction: row;
     font-size: 15px;
     justify-content: flex-start;
-    height: 25px;
-    padding-top: 5px;
+    min-height: 34px;
+    /* padding-top: 5px; */
     position: relative;
     list-style: none;
     text-decoration: none;
     color: rgb(134, 134, 136);
+    align-items: center;
 }
 
 .channel__list > a {
@@ -23,12 +25,23 @@
     z-index: 1;
     height: 100%;
     width: 100%;
+    word-wrap: break-word;
+    white-space: initial;
+    padding: 3px 2px 3px 2px;
 }
 
 .channel__list i {
     padding-right: 10px;
     font-size: 14px;
-    padding-left: 25px;
+    /* padding-left: 25px; */
+    position: absolute;
+    left: 25px;
+    top: 5px;
+}
+
+.channel__list li {
+    /* padding-top: 5px; */
+    padding-left: 45px;
 }
 
 .channel__list:hover {
